--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,59 @@
-# Prerequisites
-*.d
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+#define MAX_LENGTH 10
+#define MIN_LENGTH 7
 
-# Linker output
-*.ilk
-*.map
-*.exp
+void lessThanRequired (int* lengthOfText){
+    printf("The length of your text is less than specified, please update your text\n");
+    *lengthOfText = MIN_LENGTH;
+}
 
-# Precompiled Headers
-*.gch
-*.pch
+void equalThanRequired (int* lengthOfText){
+    printf("Thank you, Your text length is correct\n");
+    (void) lengthOfText;
+}
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+void moreThanRequired (int* lengthOfText){
+    printf("Your text is too long, please reduce the text\n");
+    *lengthOfText = MIN_LENGTH;
+}
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+int checkLenghtRequirement(char* text){
+    int length = strlen(text);
+    if (length < MIN_LENGTH)
+        return 0;
+    else if (length == MIN_LENGTH)
+        return 1;
+    else
+        return 2;
+}
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+int main() {
+    int lengthOfText, selectOption;
+    FILE *fptr = NULL;
+    char text[MAX_LENGTH];
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
+    fptr = fopen("file.txt", "w");
 
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+    if(fptr == NULL){
+        printf("Erorr");
+        exit(1);
+    }
+
+    fgets(text, MAX_LENGTH, fptr);
+
+    fclose(fptr);
+
+    selectOption = checkLenghtRequirement(text);
+
+    // TODO: Use function pointers to call the appropriate function based on selectOption
+    // HINT: Create an array of function pointers and call the appropriate function using selectOption
+    void (*functionArray[3])(int*) = {lessThanRequired, equalThanRequired, moreThanRequired};
+    functionArray[selectOption](&lengthOfText);
+
+    printf("\nThe Length is updated to %d", lengthOfText);
+
+    return 0;
+}
